--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "quiz-app-frontend",
+  "homepage": "https://ritumelroy.github.io/quizApp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -22,6 +25,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.1.1",
     "react-router-dom": "^6.22.3",
     "sass": "^1.72.0",
     "typescript": "^5.2.2",
