--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quiz-app-frontend",
-  "homepage": "https://ritumelroy.github.io/quizApp",
+  "homepage": "https://ritumelroy.github.io/quizApp/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
