--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "quiz-app-frontend",
-  "private": true,
+  "homepage": "https://ritumelroy.github.io/quizApp/",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
